--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
-    <string name="app_name">HumanResourcesDepart</string>
+    <string name="app_name">HRD</string>
+    <string name="Enter">Войти</string>
+    <string name="password">Пароль</string>
+    <string name="email">Почта</string>
+    <string name="forgetPassword">Забыли пароль?</string>
+    <string name="registration">Зарегистрироваться</string>
+    <string name="confirmedPassword">Подветверждение пароля</string>
+    <string name="passwordRule">Используйте больше 8 символов, цифры и специальные знаки</string>
+    <string name="regWithEmail">Зарегистрироваться</string>
+    <string name="haveAcc">Уже имеете аккаунт?</string>
+    <string name="noAcc">Нет аккаунта?</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
